--- a/BackendAPI/BackendAPI/appsettings.json
+++ b/BackendAPI/BackendAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Adb": "Data Source=LAPTOP-8NILL7B2\\HEMANT;Database=AdventureWorks2017;Integrated Security=sspi;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
